# custom-certs

./: .gitignore  README.md  client.py  generate_cert.py  pyproject.toml  run_server.py  server.py
certs/: localhost.crt  localhost.key
