[project]
name = "custom-certs"
version = "0.1.0"
description = "FastAPI HTTPS lab for testing per-request SSL contexts with shared httpx transport"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "certifi",
    "cryptography",
    "fastapi",
    "httpx",
    "uvicorn",
]

[project.scripts]
generate-cert = "generate_cert:main"
run-server = "run_server:main"
run-client = "client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "client.py",
    "generate_cert.py",
    "run_server.py",
    "server.py",
]
